// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload: Component should render correctly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <label
    htmlFor="id"
    style={
      Object {
        "position": "relative",
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1d1d20",
          "border": "none",
          "borderRadius": "30px",
          "color": "#FFF",
          "cursor": "pointer",
          "display": "flex",
          "fill": "#FFF",
          "fontSize": 0,
          "height": 60,
          "justifyContent": "center",
          "margin": "0",
          "minHeight": "48px",
          "opacity": 1,
          "outline": "none",
          "padding": "0",
          "paddingBottom": 5,
          "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
          "width": 60,
        }
      }
    >
      <Component
        customStyles={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </div>
  </label>
  <input
    aria-hidden={true}
    disabled={false}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with custom icon 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    customStyles={Object {}}
    htmlFor="id"
  >
    label
  </Component>
  <div
    style={Object {}}
  >
    <label
      htmlFor="id"
      style={
        Object {
          "alignItems": "center",
          "cursor": "pointer",
          "display": "flex",
          "fontSize": 18,
          "lineHeight": "24px",
          "opacity": 1,
          "paddingBottom": 30,
          "textAlign": "left",
          "width": "calc(100% - 70px)",
          "wordBreak": "break-word",
        }
      }
    >
      Select a file
    </label>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <span>
          icon
        </span>
      </label>
    </div>
  </div>
  <input
    aria-hidden={true}
    disabled={false}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with custom styles 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "position": "relative",
    }
  }
>
  <Component
    customStyles={
      Object {
        "backgroundColor": "blue",
      }
    }
    htmlFor="id"
  >
    label
  </Component>
  <div
    style={Object {}}
  >
    <label
      htmlFor="id"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "green",
          "cursor": "pointer",
          "display": "flex",
          "fontSize": 18,
          "lineHeight": "24px",
          "opacity": 1,
          "paddingBottom": 30,
          "textAlign": "left",
          "width": "calc(100% - 70px)",
          "wordBreak": "break-word",
        }
      }
    >
      Select a file
    </label>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "opacity": 1,
              "outline": "none",
              "padding": "0",
              "paddingBottom": 5,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 60,
            }
          }
        >
          <Component
            customStyles={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <input
    aria-hidden={true}
    disabled={false}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with file name 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    customStyles={Object {}}
    htmlFor="id"
  >
    label
  </Component>
  <div
    style={Object {}}
  >
    <label
      htmlFor="id"
      style={
        Object {
          "alignItems": "center",
          "cursor": "pointer",
          "display": "flex",
          "fontSize": 18,
          "lineHeight": "24px",
          "opacity": 1,
          "paddingBottom": 30,
          "textAlign": "left",
          "width": "calc(100% - 70px)",
          "wordBreak": "break-word",
        }
      }
    >
      Select a file
    </label>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "opacity": 1,
              "outline": "none",
              "padding": "0",
              "paddingBottom": 5,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 60,
            }
          }
        >
          <Component
            customStyles={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <input
    aria-hidden={true}
    disabled={false}
    id="id"
    name="name.csv"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;

exports[`FileUpload: Component should render with label 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Component
    customStyles={Object {}}
    htmlFor="id"
  >
    label
  </Component>
  <div
    style={Object {}}
  >
    <label
      htmlFor="id"
      style={
        Object {
          "alignItems": "center",
          "cursor": "pointer",
          "display": "flex",
          "fontSize": 18,
          "lineHeight": "24px",
          "opacity": 1,
          "paddingBottom": 30,
          "textAlign": "left",
          "width": "calc(100% - 70px)",
          "wordBreak": "break-word",
        }
      }
    >
      Select a file
    </label>
    <div
      style={
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <label
        htmlFor="id"
        style={
          Object {
            "position": "relative",
            "top": 10,
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "opacity": 1,
              "outline": "none",
              "padding": "0",
              "paddingBottom": 5,
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": 60,
            }
          }
        >
          <Component
            customStyles={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <input
    aria-hidden={true}
    disabled={false}
    id="id"
    style={
      Object {
        "height": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "top": 0,
        "visibility": "hidden",
      }
    }
    type="file"
  />
</div>
`;
